Update .env file to include AUTH_USER, AUTH_PASSWORD, and AUTH_TOKEN

--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,7 @@
-APP_ENV=dev
-APP_DEBUG=1
-APP_SECRET=changeme
-MONGODB_URI=mongodb://127.0.0.1:27017
-MONGODB_DB=charge_hero
-MERCURE_URL=http://localhost:3000/.well-known/mercure
-MERCURE_PUBLIC_URL=http://localhost:3000/.well-known/mercure
-MERCURE_JWT_SECRET=supersecret
-MERCURE_TOPIC_STATIONS=https://gireve.local/stations
-MERCURE_TOPIC_STATS=https://gireve.local/stats
+# Existing settings
+# ...
+
+# New environment variables
+AUTH_USER=your_user_here
+AUTH_PASSWORD=your_password_here
+AUTH_TOKEN=your_token_here
