--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"bornes","version":"0.1.0","private":true,"scripts":{"dev":"vite","build":"vite build","serve":"vite preview"},"dependencies":{"react":"^18.0.0","react-dom":"^18.0.0"},"devDependencies":{"vite":"^3.0.0","typescript":"^4.5.0","sass":"^1.32.0"}}
+{ "name": "your-package-name", "version": "1.0.0", "private": true, "dependencies": { "react": "^17.0.2", "react-dom": "^17.0.2", "vite": "^2.6.4" }, "devDependencies": { "typescript": "^4.4.4" } }
